--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -9,23 +9,22 @@
   <header>
     <h1>SAMURAIニュース</h1>
     <nav>
-      <a href="#home">ホーム</a>
-      <a href="#society">社会</a>
-      <a href="#economy">経済</a>
-      <a href="#sports">スポーツ</a>
-      <a href="#technology">テクノロジー</a>
+      <a href="#home.html">ホーム</a>
+      <a href="#society.html">社会</a>
+      <a href="#economy.html">経済</a>
+      <a href="#sports.html">スポーツ</a>
+      <a href="#technology.html">テクノロジー</a>
   </nav>
     <!-- https://www.sejuku.net/ -->
     </header>
     <main>
     <article>
     <h2>社会</h2>
-     <section>
      <h3>和菓子店も「トリックオアトリート！」</h3>
      <p>日本でも年々人気の高まるハロウィン。<br>
      今年は大手和菓子店5社がハロウィン向け和菓子セットを共同開発しました。</p>
      <audio controls>
-         <source src="C:\Users\rinos\OneDrive\Desktop\kadai_008\ichi.mp3">
+         <source src="ichi.mp3" type="audio/mp3">
      </audio>
     </section>
     <section>
@@ -66,7 +65,7 @@
             <button type="submit">送信</button>
             <button type="reset">リセット</button>
         </form>
-      </section>
+     
       <section>
          <h3>SAMURAIが新しい動画をリリース</h3>
          <p>SAMURAI公式Youtubeで新しい動画がリリースされました。<br>動画の内容はHTML/CSSの解説動画です。</p>
