--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -9,72 +9,75 @@
   <header>
     <h1>SAMURAIニュース</h1>
     <nav>
-      <a href="#home.html">ホーム</a>
-      <a href="#society.html">社会</a>
-      <a href="#economy.html">経済</a>
-      <a href="#sports.html">スポーツ</a>
-      <a href="#technology.html">テクノロジー</a>
-  </nav>
+      <a href="https://www.sejuku.net/">ホーム</a>
+      <a href="https://www.sejuku.net/">社会</a>
+      <a href="https://www.sejuku.net/">経済</a>
+      <a href="https://www.sejuku.net/">スポーツ</a>
+      <a href="https://www.sejuku.net/">テクノロジー</a>
+    </nav>
     <!-- https://www.sejuku.net/ -->
-    </header>
-    <main>
+  </header>
+  <main>
     <article>
-    <h2>社会</h2>
-     <h3>和菓子店も「トリックオアトリート！」</h3>
-     <p>日本でも年々人気の高まるハロウィン。<br>
-     今年は大手和菓子店5社がハロウィン向け和菓子セットを共同開発しました。</p>
-     <audio controls>
-         <source src="ichi.mp3" type="audio/mp3">
-     </audio>
-    </section>
-    <section>
-      <h3>私のおすすめ和菓子アンケートフォーム</h3>
+     <section>
+      <h2>社会</h2>
+      <h3>和菓子店も「トリックオアトリート！」</h3>
+      <p>日本でも年々人気の高まるハロウィン。<br>
+      今年は大手和菓子店5社がハロウィン向け和菓子セットを共同開発しました。</p>
+      <audio src="ichi.mp3" controls>
+      </audio>
+     </section>
+     <section>
+       <h3>私のおすすめ和菓子アンケートフォーム</h3>
         <form>
           <div>
-              <label for="name">氏名:</label>
-              <input type="text" id="name" name="name" placeholder="名前を入力してください" required
+              <label>氏名:</label>
+              <input type="text" placeholder="名前を入力してください">
           </div>
           <div>
-            <label for="age">年代:</label>
-            <select id="age" name="age" required>
-                <option value="">選択してください</option>
+            <label>年代:</label>
+            <select>
                 <option value="10代以下">10代以下</option>
                 <option value="20代">20代</option>
                 <option value="30代">30代</option>
                 <option value="40代以上">40代以上</option>
             </select>
-        </div>
-        <div>
+          </div>
+          <div>
             <span>性別:</span>
-            <label><input type="radio" name="gender" value="男性" required> 男性</label>
+            <label><input type="radio" name="gender" value="男性"> 男性</label>
             <label><input type="radio" name="gender" value="女性"> 女性</label>
             <label><input type="radio" name="gender" value="その他"> その他</label>
-        </div>
-        <div>
-            <label for="sweets-name">おすすめ和菓子の名称:</label>
-            <input type="text" id="sweets-name" name="sweets-name" placeholder="例：みたらし団子" required>
-        </div>
-        <div>
-            <label for="reason">おすすめする理由:</label>
-            <textarea id="reason" name="reason" rows="4" cols="40" required></textarea>
-        </div>
-        <div>
-            <label><input type="checkbox" name="agreement" required> 個人情報保護方針に同意する</label>
-        </div>
-        <div>
-            <button type="submit">送信</button>
-            <button type="reset">リセット</button>
+          </div>
+          <div>
+            <label>おすすめ和菓子の名称:</label>
+            <input type="text" placeholder="例：みたらし団子">
+          </div>
+          <div>
+            <label>おすすめする理由:</label>
+            <textarea></textarea>
+          </div>
+          <div>
+            <label><input type="checkbox"> 個人情報保護方針に同意する</label>
+          </div>
+          <div>
+            <input type="submit" value="送信">
+            <input type="reset" value="リセット">
+          </div>
         </form>
+      </section>
+    </article>
      
+    <article>
+      <h2>テクノロジー</h2>
       <section>
          <h3>SAMURAIが新しい動画をリリース</h3>
          <p>SAMURAI公式Youtubeで新しい動画がリリースされました。<br>動画の内容はHTML/CSSの解説動画です。</p>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo?si=Q-ioQHin0CpA-htM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </section>
 
     </article>
   </main>
-
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo?si=Q-ioQHin0CpA-htM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <footer>
    <p>&copy;SAMURAIニュース</p>
   </footer>
