--- a/html-css-kadai_013/index.html
+++ b/html-css-kadai_013/index.html
@@ -23,7 +23,7 @@
 
 
 <!-- ハンバーガーメニュー -->
-<img id="menu-sp" src="images/button-menu.png"  alt="ナビゲーションを開く" onclick="document.getElementById('nav-sp').style.display ='block'" style="cursor: pointer;">
+<img id="menu-sp" src="images/button-menu.png"  alt="ナビゲーションを開く" onclick="document.getElementById('nav-sp').style.display ='block'" >
 
 <!-- スマホ用のナビメニュー -->
 <nav id="nav-sp">
